melior/src/dialect/snapshots/melior__dialect__memref__tests__compile_alloc.snap
---
source: melior/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloc = memref.alloc() : memref<index>
    return
  }
}

