melior/src/dialect/snapshots/melior__dialect__memref__tests__compile_function.snap
---
source: melior/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index) -> index {
    return %arg0 : index
  }
}

