melior/src/dialect/snapshots/melior__dialect__memref__tests__compile_global.snap
---
source: melior/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  memref.global @foo : memref<index> = uninitialized
}

