melior/src/dialect/snapshots/melior__dialect__memref__tests__subview.snap
---
source: melior/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloc = memref.alloc() : memref<8x8xindex>
    %subview = memref.subview %alloc[0, 0] [4, 4] [1, 1] : memref<8x8xindex> to memref<4x4xindex>
    return
  }
}
